# pico-linux-libc

./: .gitignore  CMakeLists.txt  README.md
inc/picolinux/: picolinux_libc.hpp
src/: picolinuxc.cpp
